@@ -107,10 +107,10 @@ diff -urNad smokeping-2.2.4~/etc/basepage.html.dist smokeping-2.2.4/etc/basepage
 -<script src="cropper/lib/scriptaculous.js?load=builder,dragdrop" type="text/javascript"></script>
 -<script src="cropper/cropper.js" type="text/javascript"></script>
 -<script src="cropper/smokeping-zoom.js" type="text/javascript"></script>
-+<script src="/smokeping/cropper/lib/prototype.js" type="text/javascript"></script>      
-+<script src="/smokeping/cropper/lib/scriptaculous.js?load=builder,dragdrop" type="text/javascript"></script>
++<script src="/smokeping/prototype/prototype.js" type="text/javascript"></script>      
++<script src="/smokeping/scriptaculous/scriptaculous.js?load=builder,dragdrop" type="text/javascript"></script>
 +<script src="/smokeping/cropper/cropper.js" type="text/javascript"></script>
-+<script src="/smokeping/cropper/smokeping-zoom.js" type="text/javascript"></script>
++<script src="/smokeping/smokeping-zoom.js" type="text/javascript"></script>
  
  
  
