@@ -72,8 +72,15 @@ install: build-stamp
 	install -m 644 etc/smokemail.dist $(TMP)/usr/share/smokeping/etc/
 	install -m 644 etc/tmail.dist $(TMP)/usr/share/smokeping/etc/
 
-	install -d $(TMP)/usr/lib/cgi-bin
-	install htdocs/smokeping.cgi.dist $(TMP)/usr/lib/cgi-bin/smokeping.cgi
+	install -d $(TMP)/usr/share/smokeping/cgi-bin
+	install -m 644 htdocs/smokeping.cgi.dist $(TMP)/usr/share/smokeping/cgi-bin/smokeping.cgi
+
+	install -d $(TMP)/usr/share/smokeping/htdocs
+	install -m 644 htdocs/cropper/smokeping-zoom.js $(TMP)/usr/share/smokeping/htdocs/
+
+	for d in cropper prototype scriptaculous; do \
+		dh_link /usr/share/javascript/$$d /usr/share/smokeping/htdocs/$$d; \
+	done
 
 	install -d $(TMP)/usr/share/doc/$(PACKAGE)/html
 	install -d $(TMP)/usr/share/doc/$(PACKAGE)/html/Smokeping
@@ -98,8 +105,6 @@ install: build-stamp
 	install -m 644 doc/Smokeping/matchers/*.html $(TMP)/usr/share/doc/$(PACKAGE)/html/Smokeping/matchers
 	install -m 644 doc/Smokeping/sorters/*.html $(TMP)/usr/share/doc/$(PACKAGE)/html/Smokeping/sorters
 
-	cd htdocs; find cropper -not -name 'licence.txt' -not -name prototype.js.LICENSE -print0 | cpio -pd0m $(TMP)/var/www/smokeping
-	
 	for s in 1 3 5 7;\
 	do\
 		install -d $(TMP)/usr/share/man/man$$s;\
